@@ -144,6 +144,11 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   this way we may still know what was the state of the item when the advice was given in case item content changes
 - MeetingItem.getAdviceDataFor returns now the real given meetingadvice object in key 'given_advice' if it was already
   given, if not given, this key contains None
+- Changed parameter MeetingConfig.enableAnnexToPrint to have 3 possibilities : "disabled", "enabled for information",
+  in this case annexes are set "to print" for information, it is not converted to printable format and these annexes need
+  to be printed manually, last option is "for automated printing", in this case, annexes "to print" are converted to
+  printable formats to be inserted in a generated Pod template.  Added also a faceted filter "annexes to print?" filtering
+  items having annexes to print or not
 
 3.3 (2015-02-27)
 ----------------
